[ATK] Utilize AtkTableCell to expose directly AccessibilityTableCell to AT https://bugs.webkit.org/show_bug.cgi?id=129250

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Test: accessibility/table-scope.html

Exposing AtkTableCell to AT. Implementing possibility to get column headers and row headers
as an array of cells.

* GNUmakefile.list.am:
* PlatformEfl.cmake:
* accessibility/atk/WebKitAccessibleInterfaceTableCell.cpp: Added.
(convertToGPtrArray):
(core):
(webkitAccessibleTableCellGetColumnHeaderCells):
(webkitAccessibleTableCellGetRowHeaderCells):
(webkitAccessibleTableCellInterfaceInit):
* accessibility/atk/WebKitAccessibleInterfaceTableCell.h: Added.
* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(getInterfaceMaskFromObject):

Tools:

Changing version of ATK to 2.11.90, because it introduces AtkTableCell interface.
Implementing methods so that we could test column/row headers represented as an array of cells.

* DumpRenderTree/AccessibilityUIElement.cpp:
* DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
(AccessibilityUIElement::columnHeaders):
(AccessibilityUIElement::rowHeaders):
* DumpRenderTree/win/AccessibilityUIElementWin.cpp: Adding empty stubs, to not break compilation.
(AccessibilityUIElement::columnHeaders):
(AccessibilityUIElement::rowHeaders):
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::rowHeaders):
(WTR::AccessibilityUIElement::columnHeaders):
* efl/jhbuild.modules:
* gtk/jhbuild.modules:

LayoutTests:

Sharing test with GTK/EFL.

* accessibility/table-scope-expected.txt: Renamed from LayoutTests/platform/mac/accessibility/table-scope-expected.txt.
* accessibility/table-scope.html: Renamed from LayoutTests/platform/mac/accessibility/table-scope.html.
* platform/win/TestExpectations: Skipping on windows, missing implementation.


Canonical link: https://commits.webkit.org/147480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164786 268f45cc-cd09-0410-ab3c-d52691b4dbfc